# CompatibilityCheckerCompileTime_Public

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: android.toolchain.cmake
src/: main.cpp  platform_config.hpp  test_types.hpp  type_signature.hpp
